--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ html {
 body {
   overflow-x: hidden;
   background-color: #FFF;
+  background-color: #faebd6; /*#edd8bd*/
 }
   
 ::selection {
@@ -126,9 +127,15 @@ header {
 	align-items: center;
 	justify-content: space-between;
 	box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
-	z-index: 10000;
+	z-index: 100;
 }
-header .navbar a {
+header .logo {
+  font-size: 2.5rem;
+  color: #FFF;
+  font-style: italic;
+
+}
+header .navbar a{
 	font-size: 1.7rem;
 	padding: .5rem 1.5rem;
 	color: #cdaa7c;
@@ -158,7 +165,6 @@ header .icons i:hover {
 header .icons #menu {
 	display: none;
 }
-
 /*Header style end*/
 
 /*Home style start*/
@@ -168,7 +174,6 @@ header .icons #menu {
 	height: 95vh;
 	justify-content: flex-start;
 }
-
 .home .home-slider .slide1 {
 	background: url(img/Home1.webp);
 }
@@ -196,22 +201,21 @@ header .icons #menu {
     margin-top: 150px;
 }
 .home .home-slider .slide .content .content2 {
-    margin-left: 450px;
-    margin-top: 85px;
+    margin-left: 500px;
+    margin-top: 150px;
 }
 .home .home-slider .slide .content .content3 {
     margin-left: 150px;
     margin-top: 45px;
 }
 .home .home-slider .slide .content h3 {
-  background-color: #fff;
 	color: #cdaa7c;
 	font-size: 3rem;
-	font-weight: 400;
+	font-weight: 900;
 }
 .home .home-slider .slide .content h1 {
 	color: #fff;
-	font-size: 5.5rem;
+	font-size: 6rem;
 }
 .home .home-slider .slide .content p {
 	color: #e6e7e7;
@@ -318,8 +322,8 @@ header .icons #menu {
 .about-buttons {
   column-gap: 2rem;
 }
-.about-link .link-text,
-.about-arrowIcon {
+.about-link .link-text, 
+.about-link .about-arrowIcon {
   color: #333;
   text-transform: uppercase;
 }
@@ -336,17 +340,14 @@ section {
   padding: 60px 0;
   overflow: hidden;
 }
-
 .section-bg {
   background: url(img/background1.webp);
   background-size: cover;
 	background-repeat: no-repeat;
 }
-
 .section-title {
   padding-bottom: 40px;
 }
-
 .section-title p {
   margin-left: -400px;
   font-size: 50px;
@@ -354,24 +355,29 @@ section {
   font-family: "Playfair Display", serif;
   color: #cda45e;
 }
-
 .menu-container {
   display: grid;
   grid-template-columns: repeat(2,1fr);
-  column-gap: 6rem;  /*16rem*/
+  column-gap: 10rem;
   align-items: center;
   margin-left: -200px;
   width: 95%;
-
 }
 .menu .menu-item {
   margin-top: 50px;
+}
+.col-2, .col-4,
+.col-6, .col-8,
+.col-10, 
+.col-1, .col-3, .col-5, .col-7, .col-9{
+  margin-right: -65px;
 }
 .menu .menu-img {
   width: 80px;
   border-radius: 50%;
   float: left;
   border: 5px solid rgba(255, 255, 255, 0.2);
+  right: -50px;
 }
 .menu .menu-content {
   margin-left: 90px;
@@ -444,6 +450,56 @@ section {
   display: grid;
   row-gap: 4rem;
 }
+.Clients-content .Clients-imageContent:before {
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 100%;
+	display: none;
+	top: 0;left: 0;right: 0;bottom: 0;
+	background: rgba(0, 0, 0, .5);
+	z-index: 5;
+}
+.Clients-content .Clients-imageContent:hover.Clients-imageContent:before {
+	display: block;
+}
+.Clients  .chef-info {
+	position: absolute;
+	top: 130%;
+	left: 0;right: 0;bottom: 0;
+	display: flex;
+	justify-content: center;
+	z-index: 10;
+	align-items: center;
+	transition: 1s;
+	cursor: pointer;
+}
+.Clients .chef-info h3 {
+	font-size: 2.5rem; 
+  text-align: center;
+	color: #fff;
+	padding: .8rem 0;
+}
+.Clients .chef-info span {
+	font-size: 1.7rem; 
+	color: #cdaa7c;
+	letter-spacing: 1px;
+	font-weight: 400;
+  text-align: center;
+}
+.Clients .chef-info ul {
+	list-style: none;
+	display: flex;
+	grid-gap: 2rem;
+	padding: 3rem 0;
+}
+.Clients .chef-info ul li a  {
+	color: #b9b6b6;
+	font-size: 1.8rem;
+}
+.Clients .Clients-imageContent:hover .chef-info {
+	top: 0;
+}
 /*Clients Style end*/
 
 /*Gallery style starts*/
@@ -476,6 +532,129 @@ section {
   clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
 }
 /*Gallery style end*/
+
+/*Review style start*/
+.review h3 {
+  text-align: center;
+  color: #C2703D;
+  font-size: 4rem;
+  padding: 3rem;
+  margin: 3rem;
+}
+.review .box-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(35rem,1fr));
+  gap: 3rem;
+}
+.review .review-slider{
+  padding-bottom: 2rem;
+}
+.review .box-container .box{
+  background:#1a1814;
+  border: .1rem solid rgba(0,0,0,.2);
+  border-radius: .5rem;
+  box-shadow: 0 .1rem .5rem rgba(0,0,0,.5);
+}
+.review .box-container .box .content{
+  padding: 2rem;
+  padding-top: 0;
+  background-color: #1a1814;
+}
+.review .content .user-review a i{
+  font-size: 3rem;
+  color: #C2703D;
+  float: right;
+  margin-top: -5rem;
+}
+.review .user-review img {
+  margin-top: 3rem;
+  margin-right: 1rem;
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+  border: 2px solid white;
+}
+.review .box-container .box .user-review .p1 {
+  display: block;
+  margin-top: -60px;
+  margin-left: 70px;
+  color: #FFF; /*#1a1814*/
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 20px;
+}
+.review .box-container .box .user-review .p2 {
+  color: hsla(0, 0%, 81%, 0.649);
+  font-size: 15px;
+  display: block;
+  margin-left: 75px;
+}
+.review .stars {
+  padding: 2.5rem;
+  word-spacing: 1rem;
+}
+.review .stars i {
+  font-size: 1.5rem;
+  color: #C2703D;
+}
+.review .box-container .box .content p {
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 1.5;
+  color: #aaa; /*#666*/
+  font-size: 16px;
+}
+.review .box-container .box .image {
+  height: 25rem;
+  width: 100%;
+  padding: 1.5rem;
+  overflow: hidden;
+  position: relative;
+}
+.review .box-container .box .image img {
+  height: 100%;
+  width: 100%;
+  border-radius: .5rem;
+  object-fit: cover;
+}
+.review .box-container .box .image .fa-heart {
+  position: absolute;
+  top: 2.5rem; 
+  right: 2.5rem;
+  height: 5rem;
+  width: 5rem;
+  line-height: 5rem;
+  text-align: center;
+  font-size: 2rem;
+  background: #fff;
+  border-radius: 50%;
+  color: #C2703D;
+}
+.review .box-container .box .image .fa-heart:hover{
+  background-color: #C2703D;
+  color: #fff;
+}
+.review .box-container .box .icon {
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem;
+}
+.review .box-container .box .icon a {
+  font-size: 2rem;
+  color: #666;
+}
+.review .box-container .box .icon a:hover {
+  color: #C2703D;
+}
+.review .box-container .box .icon a i {
+  padding-bottom: 1rem;
+  padding-right: .5rem;
+  color: #C2703D; 
+}
+.review .box-container .box .icon a .fa-comment {
+  transform:rotatey(180deg);
+}
+/*Review style end*/
 
 /*reservation style start*/
 .reservation {
