--- a/assets/style.css
+++ b/assets/style.css
@@ -1236,6 +1236,7 @@ section {
 }
 .reservation .image {
 	width: 55%;
+  height: 55rem;
 	background: url(../img/reservation.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -1248,9 +1249,14 @@ section {
 	padding: 9rem 7%;
 }
 .reservation .form h1 {
-	color: #fff;
+	color:#cda45e;
+  margin-top: 10%;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 50px;
 }
 .reservation .form-holder {
+  margin-top: 30px;
 	display: flex;
 	grid-gap: 3rem;
 	width: 100%;
