--- a/assets/style.css
+++ b/assets/style.css
@@ -611,6 +611,7 @@ header .icons #bars {
   font-size: 45px;
   margin: 35px;
   color: #cda45e;
+  margin-top: 15%;
 }
 .section-container .container {
   font-size: 16px;
@@ -689,6 +690,7 @@ header .icons #bars {
 }
 .why-us .section-title p {
   margin-left: 50px;
+  margin-top: 15%;
 }
 .why-us .box {
   padding: 50px 30px;
@@ -737,7 +739,7 @@ header .icons #bars {
 /* Menu style start */
 /* ------------------------------------------- */
 
-section {
+#Menu {
   padding: 60px 0;
   overflow: hidden;
 }
@@ -767,10 +769,8 @@ section {
 .menu .menu-item {
   margin-top: 50px;
 }
-.col-2, .col-4,
-.col-6, .col-8,
-.col-10, 
-.col-1, .col-3, .col-5, .col-7, .col-9{
+#Menu2, #Menu4, #Menu6, #Menu8, #Menu10, 
+#Menu1, #Menu3, #Menu5, #Menu7, #Menu9{
   margin-right: -65px;
 }
 .menu .menu-img {
@@ -920,6 +920,7 @@ section {
   text-align: center;
   font-size: 35px;
   margin: 10px;
+  margin-top: -4%;
   color: #cda45e;
 }
 .section-prices .row {
@@ -942,11 +943,6 @@ section {
   padding: 15px;
   margin: 20px;
   border-bottom: 1px solid #C2703D;
-}
-.prices-box div:first-child {
-  background-color: #fff;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
 }
 .prices-box div:last-child {
   text-align: center;
@@ -1004,7 +1000,7 @@ section {
 }
 .Events-left {
   margin-left: 60px;
-  margin-top: 20rem;
+  margin-top: 10rem;
   width: 500px;
 }
 
@@ -1331,7 +1327,6 @@ section {
 /* Review style end */
 /* ------------------------------------------- */
 
-
 /* ------------------------------------------- */
 /* Reservation style start */
 /* ------------------------------------------- */
@@ -1353,7 +1348,7 @@ section {
 .reservation .form {
 	background: #181818;
 	width: 45%;
-	padding: 9rem 7%;
+	padding: 6rem 7%;
 }
 .reservation .form h1 {
 	color:#cda45e;
@@ -1383,6 +1378,84 @@ section {
 	color: #b7b3b3;
 }
 
+.reservation .form-text { 
+  margin-top: 5%; 
+}
+
+.reservation .form-text .link {
+  display: inline;
+  color: hsl(38, 61%, 73%);
+}
+
 /* ------------------------------------------- */
 /* Reservation style end */
+/* ------------------------------------------- */
+
+/* ------------------------------------------- */
+/* Contact style start */
+/* ------------------------------------------- */
+
+.Contact {
+  background-image: url(../img/background_contact.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: -8%;
+}
+.Contact .containeer .Contact-form {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  column-gap: 0;
+  align-items: center;
+  margin-top: 8%;
+}
+.form-left { 
+	background:#181818;
+	width: 80%;
+  height: 90%;
+	padding: 6rem;
+  margin: 20px auto;
+  margin-left: 25%;
+}
+.Contact .form-left .Contact-headline {
+  color: #fff;
+  font-size: 45px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.Contact .form-text { 
+  margin-block-end: 40px; 
+  color: #444;
+  font-size: 18px;
+}
+.contact .form-left .input-contact {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  column-gap: 1rem;
+}
+.form-control {
+  background-color:  hsla(210, 4%, 11%, 1);
+  color: #FFF;
+  height: 55px;
+  padding: 10px 20px;
+  margin: 5px;
+  border: 1px solid hsla(0, 0%, 100%, 0.1);
+  margin-block-end: 20px;
+  outline: none;
+  transition: border-color 500ms ease;
+}
+.form-control:focus { 
+  border-color: hsl(38, 61%, 73%); 
+}
+.form-right {
+  display: flex;
+  width: 65%;
+  height: 580px;
+  margin-left: 5%;
+  flex-wrap: wrap;
+  background-repeat: repeat;
+  background-position: top left;
+}
+
+/* ------------------------------------------- */
+/* Contact style end */
 /* ------------------------------------------- */
