--- a/assets/style.css
+++ b/assets/style.css
@@ -1113,6 +1113,76 @@ header .icons #bars {
 /* Garllery style end */
 /* ------------------------------------------- */
 
+/* ------------------------------------------- */
+/* special style start */
+/* ------------------------------------------- */
+
+.special .heading {
+  margin: 10% 0% 10% 35%;
+  font-size: 50px;
+  font-weight: 700;
+  font-family: "Playfair Display", serif;
+  color: #cda45e;
+}
+
+
+.special .box-container {
+  display: grid;
+  -ms-grid-columns: (minmax(29rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
+  gap: 1.5rem;
+}
+
+.special .box-container .box {
+  text-align: center;
+  padding: 1rem;
+  position: relative;
+}
+
+.special .box-container .box img {
+  height: 20rem;
+  width: 20rem;
+  border-radius: 50%;
+  margin-bottom: 1rem;
+  border: 5px solid #fff;
+  
+}
+
+.special .product-price {
+  position: absolute;
+  background-color: #e67e22;
+  font-weight: 500;
+  width:  50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transform: translate(75px,-200px);
+}
+.special .product-price p {
+  display: inline-block;
+  font-size: 15px;
+  font-weight: 400;
+  margin-top: 5px;
+}
+
+.special .box-container .box h3 {
+  font-size: 3rem;
+  color: #e67e22;
+}
+
+.special .box-container .box p {
+  font-size: 1.5rem;
+  color: #10221b;
+  padding: 1rem 0;
+  line-height: 2;
+}
+
+/* ------------------------------------------- */
+/* special style end */
+/* ------------------------------------------- */
+
 /*--------------------------------------------*/
 /* packages style start */
 /*--------------------------------------------*/
@@ -1399,14 +1469,13 @@ header .icons #bars {
   background-image: url(../img/background_contact.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top: -8%;
 }
 .Contact .containeer .Contact-form {
   display: grid;
   grid-template-columns: repeat(2,1fr);
   column-gap: 0;
   align-items: center;
-  margin-top: 8%;
+  margin-top: 0%;
 }
 .form-left { 
 	background:#181818;
@@ -1458,4 +1527,135 @@ header .icons #bars {
 
 /* ------------------------------------------- */
 /* Contact style end */
+/* ------------------------------------------- */
+
+/* ------------------------------------------- */
+/* footer style end */
+/* ------------------------------------------- */
+
+.footer {
+  background: black;
+  padding-bottom: 0px;
+  color: #fff;
+  font-size: 15px;
+}
+.footer .footer-main {
+  background: #0c0b09;
+  border-top: 1px solid #37332a;
+  border-bottom: 1px solid #28251f;
+  padding-top: 60px;
+}
+.footer .footer-main .row {
+  height: 380px;
+}
+.footer .footer-info h3 {
+  font-size: 26px;
+  margin-bottom: 20px;
+  padding: 2px 0;
+  line-height: 1;
+  font-weight: 400;
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+}
+.footer .footer-info p {
+  font-size: 15px;
+  line-height: 30px;
+  margin-bottom: 10px;
+  font-family: "Playfair Display", serif;
+  color: #fff;
+}
+.footer .footer-info p i {
+  color: #cda45e;
+  margin-left: 10px;
+  margin-right: 30px;
+}
+.footer .social-links a {
+  font-size: 18px;
+  display: inline-block;
+  background: #28251f;
+  color: #fff;
+  line-height: 1;
+  padding: 8px 0;
+  margin-top: 10px;
+  margin-right: 5px;
+  border-radius: 50%;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+}
+.footer .social-links a:hover {
+  background: #cda45e;
+  color: #fff;
+  text-decoration: none;
+}
+.footer .footer-main h4 {
+  font-size: 22px;
+  font-weight: 600;
+  color: #fff;
+  position: relative;
+  padding-bottom: 12px;
+}
+.footer .footer-links {
+  margin-bottom: 0px;
+}
+.footer .footer-links ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.footer .footer-links ul i {
+  padding-right: 10px;
+  color: #cda45e;
+  font-size: 12px;
+  line-height: 1;
+}
+.footer .footer-links ul li {
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+}
+.footer .footer-links ul a {
+  color: #fff;
+  transition: 0.3s;
+  display: inline-block;
+  line-height: 1;
+}
+.footer .footer-links ul a:hover {
+  color: #cda45e;
+  padding-left: 5%;
+}
+.footer  .footer-newsletter form {
+  margin-top: 30px;
+  background: #28251f;
+  padding: 6px 10px;
+  position: relative;
+  border-radius: 50px;
+  border: 1px solid #454035;
+  width: 400px;
+}
+.footer .footer-newsletter form input[type=email] {
+  border: 0;
+  padding: 6px;
+  width: 90%;
+  background: #28251f;
+  color: white;
+}
+.footer .footer-newsletter form input[type=submit] {
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  bottom: -1px;
+  border: 0;
+  background: none;
+  font-size: 20px;
+  padding: 0 20px 2px 20px;
+  background: #cda45e;
+  color: #fff;
+  transition: 0.3s;
+  border-radius: 50px;
+}
+
+/* ------------------------------------------- */
+/* footer style end */
 /* ------------------------------------------- */
