--- a/assets/style.css
+++ b/assets/style.css
@@ -23,7 +23,6 @@ body {
   background-color: #FFF;
   background-color: #faebd6;
 }
-  
 ::selection {
   background-color: #cdaa7c; 
   color: #FFF;
@@ -41,8 +40,7 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   border-radius: 1rem;
   background-color: #C87E4F; 
-}
-  
+}  
 body,
 button,
 input {
@@ -50,7 +48,7 @@ input {
   font-weight: 400;
   color: #333
 }
-  
+
 input {
   outline: none;
 }
@@ -89,6 +87,13 @@ img {
 }
 .button:hover {
   background-color: #C2703D;
+}
+.row {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  column-gap: 5rem;
+  padding: 0;
+  margin-left: -200px;
 }
 .section-subtitle,
 .content-subtitle {
@@ -132,7 +137,7 @@ header {
   border-bottom: 1px solid rgba(12, 11, 9, 0.6);
   background: rgba(12, 11, 9, 0.6);
   transition: all 0.5s;
-	z-index: 100;
+	z-index: 110000;
 }
 header .logo {
   font-size: 2.5rem;
@@ -166,6 +171,7 @@ header .icons i {
 header .icons #bars {
 	display: none;
 }
+
 /* ------------------------------------------- */
 /* Header style end */
 /* ------------------------------------------- */
@@ -173,6 +179,7 @@ header .icons #bars {
 /* ------------------------------------------- */
 /* search style start */
 /* ------------------------------------------- */
+
 #search-form{
   position: fixed;
   top: -110%; left: 0;
@@ -201,7 +208,7 @@ header .icons #bars {
   color: #eee;
 }
 #search-form #search-box::-webkit-search-cancel-button{
-  -webkit-appearance:none;
+  --webkit-appearance:none;
 }
 #search-form label{
   color: #fff;
@@ -211,7 +218,7 @@ header .icons #bars {
 #search-form label:hover{
   color: #C2703D;
 }
-#search-form #close{
+#search-form #close {
   position: absolute;
   color: #fff;
   cursor: pointer;
@@ -352,7 +359,7 @@ header .icons #bars {
 	background: url(../img/Home3.jpg);
 }
 .home .home-slider .slide4 {
-	background: url(../img/Home4.jpg);
+	background: url(../img/Ways\ to\ Make\ Thanksgiving\ Less\ Stressful\ -\ Stress-Free\ Holiday\ Planning.jpg);
 }
 .home .home-slider .slide1,
 .home .home-slider .slide2,
@@ -449,10 +456,8 @@ header .icons #bars {
   align-items: center;
   padding: 0 3rem;
 }
-
 .about-heading, 
-.Events-heading,
-.clients-heading,
+.fresh-heading,
 .gallery-heading,
 .review-heading,
 .reservation-heading {
@@ -461,7 +466,7 @@ header .icons #bars {
   text-transform: uppercase;
   font-size: 130px;
   text-align: center;
-  margin-bottom: 8rem;
+  margin-bottom: 10rem;
   margin-top: -100px;
 }
 .review-heading {
@@ -476,7 +481,6 @@ header .icons #bars {
 .gallery-heading {
   color: #ffffff65;
 }
-
 .about-imageContent {
   position: relative;
   max-width: 450px; 
@@ -672,67 +676,103 @@ header .icons #bars {
 /* ------------------------------------------- */
 
 /* ------------------------------------------- */
-/* Why Us style start */
+/* Fresh style start */
 /* ------------------------------------------- */
 
-.row {
+.section-fresh {
+  margin: 15% 0;
+}
+.section-fresh .row {
+  margin-left: 1.5%;
   display: grid;
-  grid-template-columns: repeat(3,1fr);
-  column-gap: 5rem;
+  grid-template-columns: repeat(5,1fr);
+  column-gap: 1rem;
   padding: 0;
-  margin-left: -200px;
+  position: relative;
 }
-.row .box4, .row .box5 {
-  transform: translatex(180px);
+.section-fresh img {
+  width: 40vh;
+  height: 600px;
+  border: 3px solid rgba(12, 11, 9, 0.585);
 }
-.row .box5 {
-  transform: translate(250px);
+.section-fresh .row .box::after {
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: calc(100% - 305px);
+  border-left: solid 80px rgba(12, 11, 9, 0.781);
+  transform: rotate(87.7deg);
+  z-index: 1;
+  margin-top: 20%;
+  margin-left: -16.4%;
 }
-.why-us .section-title p {
-  margin-left: 50px;
-  margin-top: 15%;
+.section-fresh .row .box::before {
+  border-right: solid 80px rgba(12, 11, 9, 0.781);
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: calc(100% - 305px);
+  transform: rotate(87.6deg);
+  margin-top: 18.65%;
+  margin-left: 4%;
 }
-.why-us .box {
-  padding: 50px 30px;
-  margin-bottom: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  transition: all ease-in-out 0.3s;
-  background: #1a1814;
+.section-fresh .box .box-title {
+  position: absolute;
+  margin-top: -10%;
+  margin-left: 0%;
 }
-.why-us .box span {
-  display: block;
-  font-size: 28px;
-  font-weight: 700;
-  color: #cda45e;
+.section-fresh .box .box-title h3 {
+  position: absolute;
+  color: #FFF;
+  font-size: 60px;
+  z-index: 111;
 }
-.why-us .box h4 {
-  font-size: 24px;
+.section-fresh .box .box-title p {
+  color: #aaa;
+  font-size: 30px;
   font-weight: 600;
-  padding: 0;
-  margin: 20px 0;
-  color: rgba(255, 255, 255, 0.8);
+  margin-top: -5%;
+  z-index: 1111;
 }
-.why-us .box p {
-  width: 350px;
-  color: #aaaaaa;
-  font-size: 15px;
-  margin: 0;
-  padding: 0;
-  line-height: 2.5rem;
+.section-fresh .box .box-title p span{
+  color: #cda45e;
+  margin-left: 1%;
+  font-size: 30px;
+  z-index: 1111;
 }
-.why-us .box:hover {
-  background: #cda45e;
-  padding: 30px 30px 70px 30px;
-  box-shadow: 10px 15px 30px rgba(0, 0, 0, 0.18);
+.section-fresh .box-heading {
+  width: 100%;
 }
-.why-us .box:hover span,
-.why-us .box:hover h4,
-.why-us .box:hover p {
-  color: #fff;
+.section-fresh .fresh-heading {
+  color: #333;
+  font-weight: 900;
+  text-transform:capitalize;
+  font-size: 80px;
+  text-align: center;
+  margin-bottom: 8rem;
+  margin-top: 20%;
+  margin-left: 10%;
+}
+.section-fresh  h3 {
+  color: #c2703d48;
+  text-transform: capitalize;
+  font-size: 65px;
+  font-weight: 990;
+  margin-left: 20%;
+  margin-top: -18%;
+}
+.section-fresh p {
+  width: 450px;
+  margin-left: 5%;
+  margin-top: 10%;
+  color: hsl(240, 9%, 51%);
+  line-height: 1.6;
+  font-size: 14px;
+  font-style: italic;
 }
 
 /* ------------------------------------------- */
-/* Why Us style end */
+/* Fresh style end */
 /* ------------------------------------------- */
 
 /* ------------------------------------------- */
@@ -829,35 +869,202 @@ header .icons #bars {
 /* ------------------------------------------- */
 
 /* ------------------------------------------- */
-/* Clients style start */
+/* Introduce style start */
 /* ------------------------------------------- */
 
-.Clients .content-title,
-.Clients .content-description {
-  text-align: left;
+.introduce {
+  background-color: hsla(210, 4%, 9%, 1);
 }
-.Clients-content {
+.introduce-content {
   display: grid;
   grid-template-columns: repeat(2,1fr);
   column-gap: 16rem;
   align-items: center;
   padding: 0 3rem;
 }
-.Clients-imageContent {
+.introduce .content-title1,
+.introduce .content-title2 {
+  color: #cda45e;
+  margin-top: 10%;
+  text-align: center;
+  font-size: 60px;
+  font-weight: 400;
+  text-transform: uppercase;
   position: relative;
-  max-width: 450px; 
+}
+.introduce .content-title2 {
+  margin-top: 10%;
+  font-size: 50px;
+}
+.introduce .content-description1,
+.introduce .content-description2 {
+  color: #b5a082;
+  margin-top: 5%;
+  margin-left: 15%;
+  text-align: left;
+  font-size: 20px;
+  line-height: 3.5rem;
+}
+.introduce .content-title1::after,
+.introduce .content-title2::after {
+  content: "";
+  position: absolute;
+  width: 450px;
+  height: 8%;
+  top: 65px;
+  left: 80px;
+  background-color: #cda45e;
+  z-index: 1;
+}
+.introduce .content-title2::after {
+  width: 550px;
+  left: 30px;
+}
+.introduce .introduce-image::after {
+  content: "";
+  position: absolute;
+  width: 550px;
+  margin-top: -45%;
+  margin-left: 5%;
+  height: 680px;
+  border: 8px double #cda45e;
+  z-index: 1;
+}
+.introduce .introduce-img {
+  width: 100%;
+  height: 700px;
+  margin-right: 50px;
+  border: 10px solid #cda45e;
+  position: relative;
+  z-index: 100;
+}
+
+/* ------------------------------------------- */
+/* Introduce style end */
+/* ------------------------------------------- */
+
+/* ------------------------------------------- */
+/* professional style start */
+/* ------------------------------------------- */
+
+.section-professional {
+  background-color: #28251f;
+}
+.section-professional .row {
+  margin-left: 1.5%;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  column-gap: 2rem;
+  padding: 0;
+  position: relative;
+}
+.section-professional .row::before {
+  content: "";
+  position: absolute;
+  width: 550px;
   height: 500px;
+  margin-top: 5%;
+  margin-left: 55%;
+  background-color: #e67d22e2; 
+  z-index: 0;
+}
+.section-professional img {
+  width: 58vh;
+  height: 600px;
+  border: 3px solid rgba(12, 11, 9, 0.585);
+}
+.section-professional .box-heading {
+  width: 100%;
+}
+.section-professional .box-heading img {
+  width: 140px;
+  height: 140px;
+  border: none;
+  position: absolute;
+  margin-top: 8%;
+  margin-left: 5%;
+  z-index: 1;
+}
+.section-professional .professional-heading {
+  color: #FFF;
+  font-weight: 600;
+  text-transform:capitalize;
+  font-size: 50px;
+  margin-bottom: 8rem;
+  margin-top: 20%;
+  margin-left: -4%;
+  position: absolute;
+  z-index: 1;
+}
+.section-professional  h3 {
+  color: #eee;
+  text-transform: capitalize;
+  font-size: 30px;
+  font-weight: 400;
+  margin-left: 5%;
+  margin-top: 18%;
+  position: absolute;
+  z-index: 1;
+}
+.section-professional p {
+  width: 450px;
+  margin-left: -5%;
+  margin-top: 25%;
+  color: #aaa;
+  line-height: 1.6;
+  font-size: 18px;
+  text-align: center;
+  position: absolute;
+  z-index: 1;
+}
+
+/* ------------------------------------------- */
+/* professional style end */
+/* ------------------------------------------- */
+
+/* ------------------------------------------- */
+/* Teams style start */
+/* ------------------------------------------- */
+
+.Team {
+  background-color: #181818;
+  background-image: url(../img/shape-1.png);
+  background-repeat: no-repeat;
+  background-size: 50vh;
+}
+.Team .content-title,
+.Team .content-description {
+  text-align: left;
+}
+.Team .content-title {
+  color: #cda45e;
+}
+.Team .content-description {
+  color: #aaa;
+  font-size: 18px;
+}
+.Team-content {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  column-gap: 16rem;
+  align-items: center;
+  padding: 0 3rem;
+}
+.Team-imageContent {
+  position: relative;
+  width: 450px; 
+  height: 600px;
   border: 6px solid #2C3034;
 }
-.Clients .Clients-img {
+.Team .Team-img {
   width: 100%;
   height: 100%;
 }
-.Clients-details {
+.Team-details {
   display: grid;
-  row-gap: 4rem;
+  row-gap: 5rem;
 }
-.Clients-content .Clients-imageContent:before {
+.Team-content .Team-imageContent:before {
 	position: absolute;
 	content: '';
 	width: 100%;
@@ -867,10 +1074,10 @@ header .icons #bars {
 	background: rgba(0, 0, 0, .5);
 	z-index: 5;
 }
-.Clients-content .Clients-imageContent:hover.Clients-imageContent:before {
+.Team-content .Team-imageContent:hover.Team-imageContent:before {
 	display: block;
 }
-.Clients  .chef-info {
+.Team  .chef-info {
 	position: absolute;
 	top: 130%;
 	left: 0;right: 0;bottom: 0;
@@ -881,49 +1088,47 @@ header .icons #bars {
 	transition: 1s;
 	cursor: pointer;
 }
-.Clients .chef-info h3 {
-	font-size: 2.5rem; 
+.Team .chef-info h3 {
+	font-size: 4rem; 
   text-align: center;
 	color: #fff;
 	padding: .8rem 0;
 }
-.Clients .chef-info span {
-	font-size: 1.7rem; 
+.Team .chef-info span {
+	font-size: 2.4rem; 
 	color: #cdaa7c;
 	letter-spacing: 1px;
 	font-weight: 400;
-  text-align: center;
 }
-.Clients .chef-info ul {
+.Team .chef-info ul {
 	list-style: none;
 	display: flex;
 	grid-gap: 2rem;
+  margin-left: 20%;
 	padding: 3rem 0;
 }
-.Clients .chef-info ul li a  {
+.Team .chef-info ul li a  {
 	color: #b9b6b6;
 	font-size: 1.8rem;
 }
-.Clients .Clients-imageContent:hover .chef-info {
+.Team .Team-imageContent:hover .chef-info {
 	top: 0;
 }
 
 /* ------------------------------------------- */
-/* Clients style end */
+/* Teams style end */
 /* ------------------------------------------- */
 
 /* ------------------------------------------- */
 /* Prices style start */
 /* ------------------------------------------- */
 
-.prices-title {
-  text-align: center;
-  font-size: 35px;
-  margin: 10px;
-  margin-top: -4%;
-  color: #cda45e;
-}
 .section-prices .row {
+  background: url(../img/T&C\ Travel\ Guide_\ Best\ of\ Vail.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
   display: grid;
   grid-template-columns: repeat(3,1fr);
   column-gap: 1rem;
@@ -992,6 +1197,9 @@ header .icons #bars {
 /* Events style start */
 /* ------------------------------------------- */
 
+.Events {
+  background-color:  hsla(210, 4%, 9%, 1);
+}
 .Events .container {
   padding: 20px;
   display: grid;
@@ -1005,19 +1213,20 @@ header .icons #bars {
 }
 
 .Events-left .section-title {
-  color: #C2703D;
+  color: #cda45e;
   text-align: left;
+  font-size: 50px;
   width: 700px;
 }
 .Events .Events-left h3 {
   font-weight: 600;
   font-size: 26px;
   margin-bottom: 20px;
-  color: #1d1d23;
+  color: #FFF;
 }
 .Events .Events-left span {
   border-bottom: 2px solid #ffb03b;
-  color: #666;
+  color: #b5a082;
   font-size: 25px;
   font-weight: 1000;
   margin-bottom: 89px;
@@ -1026,10 +1235,13 @@ header .icons #bars {
   max-width: 100%;
   margin-top: 30px;
   margin-bottom: 30px;
+  font-size: 20px;
+  line-height: 3rem;
+  color: #666;
 }
 .Events-right { 
   position: relative;
-  margin-top: -50rem;
+  margin-top: -60rem;
 }
 .Events-right .img-box {
   width: 40%;
@@ -1124,30 +1336,24 @@ header .icons #bars {
   font-family: "Playfair Display", serif;
   color: #cda45e;
 }
-
-
 .special .box-container {
   display: grid;
   -ms-grid-columns: (minmax(29rem, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
   gap: 1.5rem;
 }
-
 .special .box-container .box {
   text-align: center;
   padding: 1rem;
   position: relative;
 }
-
 .special .box-container .box img {
   height: 20rem;
   width: 20rem;
   border-radius: 50%;
   margin-bottom: 1rem;
   border: 5px solid #fff;
-  
 }
-
 .special .product-price {
   position: absolute;
   background-color: #e67e22;
@@ -1166,12 +1372,10 @@ header .icons #bars {
   font-weight: 400;
   margin-top: 5px;
 }
-
 .special .box-container .box h3 {
   font-size: 3rem;
   color: #e67e22;
 }
-
 .special .box-container .box p {
   font-size: 1.5rem;
   color: #10221b;
@@ -1227,7 +1431,7 @@ header .icons #bars {
   position: absolute;
   padding: 10px;
   width: 22%;
-  height: 18%; /*25%*/
+  height: 18%;
   margin-top: -420px;
 }
 .food-1 {
@@ -1269,15 +1473,7 @@ header .icons #bars {
 /* ------------------------------------------- */
 
 .review {
-  margin-top: -160rem;
-}
-.review h3{
-  text-align: center;
-  color: #C2703D;
-  font-size: 4rem;
-  padding: 3rem;
-  margin: 0rem;
-  transform: translateY(-90px);
+  margin-top: -150rem;
 }
 .review .box-container{
   display: grid;
@@ -1316,7 +1512,7 @@ header .icons #bars {
   display: block;
   margin-top: -60px;
   margin-left: 70px;
-  color: #FFF; /*#1a1814*/
+  color: #FFF;
   font-size: 20px;
   font-weight: bold;
   line-height: 20px;
@@ -1339,7 +1535,7 @@ header .icons #bars {
   font-size: 12px;
   font-weight: 300;
   line-height: 1.5;
-  color: #aaa; /*#666*/
+  color: #aaa;
   font-size: 16px;
 }
 .review .box-container .box .image {
@@ -1398,6 +1594,51 @@ header .icons #bars {
 /* ------------------------------------------- */
 
 /* ------------------------------------------- */
+/* News style start */
+/* ------------------------------------------- */
+
+.News {
+  padding-top: 150px;
+  padding-bottom: 150px;
+  margin-top: -1.5%;
+  background-image: url(../img/Menu.webp);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+.News .container {
+  display: flex;
+  flex-wrap: wrap;
+  z-index: 2;
+  justify-content: center;
+  background-color: #cda45eb5;
+  margin: 0px 10px;
+}
+.News .container .box {
+  flex-basis: 25%;
+  text-align: center;
+  padding: 50px;
+}
+.News .container .box .number {
+  font-size: 50px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+.News .container .box  .content {
+  font-size: 20px;
+}
+
+/* ------------------------------------------- */
+/* News style end */
+/* ------------------------------------------- */
+
+/* ------------------------------------------- */
 /* Reservation style start */
 /* ------------------------------------------- */
 
@@ -1447,11 +1688,9 @@ header .icons #bars {
 .reservation .form form input:placeholder {
 	color: #b7b3b3;
 }
-
 .reservation .form-text { 
   margin-top: 5%; 
 }
-
 .reservation .form-text .link {
   display: inline;
   color: hsl(38, 61%, 73%);
