--- a/assets/style.css
+++ b/assets/style.css
@@ -143,7 +143,13 @@ header .logo {
   font-size: 2.5rem;
   color: #FFF;
   font-style: italic;
-
+}
+header .navbar .logo {
+  display: none;
+}
+header .navbar .logo img {
+  width: 50px;
+  vertical-align: -50%;
 }
 header .navbar a{
 	font-size: 1.7rem;
@@ -168,7 +174,8 @@ header .icons i {
 	font-size: 1.7rem;
 	color: #fff;
 }
-header .icons #bars {
+header .icons #bars,
+header .navbar-info {
 	display: none;
 }
 
@@ -239,7 +246,6 @@ header .icons #bars {
   bottom: 0;
   right:  0;
   max-width: 400px;
-  width: 100%;
   height: calc(100vh - 65px);
   background: rgba(12, 11, 9, 0.6);
   box-shadow: -1px 1px 3px 0 hsla(0, 0%, 0%, 0.05);
@@ -472,14 +478,11 @@ header .icons #bars {
 .review-heading {
   margin: 0;
 }
-.reservation-heading,
 .gallery-heading {
+  color: #ffffff65;
   margin: 20px auto;
   font-size: 100px;
   margin-bottom: 60px;
-}
-.gallery-heading {
-  color: #ffffff65;
 }
 .about-imageContent {
   position: relative;
@@ -492,11 +495,11 @@ header .icons #bars {
   position: absolute;
   width: 100px;
   right: -134px;
-  height: calc(100% - 100px);
+  top: -34px;
+  height: calc(100% - 75px);
   border-left: solid 80px #484848;
   border-bottom: solid 80px #484848;
   z-index: -1;
-  top: -34px;
 }
 .about .about-content .about-imageContent::before {
   content: "";
@@ -514,7 +517,7 @@ header .icons #bars {
 }
 .aboutImg-textBox {
   position: absolute;
-  bottom: -1rem;
+  bottom: -4rem;
   right: -7rem;
   padding: 2rem;
   max-width: 360px;
@@ -522,6 +525,7 @@ header .icons #bars {
   text-align: center;
   border: 6px solid #2C3034;
   background-color: #FFF;
+  z-index: 1;
 }
 .aboutImg-textBox .content-description {
   text-align: center;
@@ -797,7 +801,7 @@ header .icons #bars {
 }
 .section-title p {
   margin-left: -400px;
-  font-size: 50px;
+  font-size: 60px;
   font-weight: 700;
   font-family: "Playfair Display", serif;
   color: #cda45e;
@@ -838,15 +842,15 @@ header .icons #bars {
   right: 0;
   top: -4px;
   z-index: 1;
-  color: #FFF; /*#bab3a6*/
+  color: #FFF;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 .menu .menu-content a {
   padding-right: 5px;
-  background: #cda45e; /*#1a1814*/
+  background: #cda45e;
   position: relative;
   z-index: 3;
-  font-weight: bold; /*700*/
+  font-weight: bold;
   font-size: 19px;
   color: #1a1814;
   transition: 0.3s;
@@ -1081,7 +1085,7 @@ header .icons #bars {
 .Team-content .Team-imageContent:hover.Team-imageContent:before {
 	display: block;
 }
-.Team  .chef-info {
+.Team .chef-info {
 	position: absolute;
 	top: 130%;
 	left: 0;right: 0;bottom: 0;
@@ -1215,7 +1219,6 @@ header .icons #bars {
   margin-top: 10rem;
   width: 500px;
 }
-
 .Events-left .section-title {
   color: #cda45e;
   text-align: left;
@@ -1280,7 +1283,8 @@ header .icons #bars {
   box-shadow: -2px -2px 10px hsla(0, 0%, 0%, 0.1);
 }
 .abs-content-box img {
-  width: 100%;
+  height: 350px;
+  width: 600px;
   filter:grayscale(100%);
 }
 
@@ -1318,7 +1322,6 @@ header .icons #bars {
 }
 .inner-gallery .gallery-image img {
   width: 100%;
-
   transition: all ease-in-out 0.4s;
 }
 .inner-gallery .gallery-image:hover img {
@@ -1334,7 +1337,7 @@ header .icons #bars {
 /* ------------------------------------------- */
 
 .special .heading {
-  margin: 10% 0% 10% 25%;
+  margin: 10% 0% 10% 27%;
   font-size: 80px;
   font-weight: 700;
   font-family: "Playfair Display", serif;
@@ -1344,7 +1347,7 @@ header .icons #bars {
   display: grid;
   -ms-grid-columns: (minmax(29rem, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
-  gap: 1.5rem;
+  gap: 2.5rem;
 }
 .special .box-container .box {
   text-align: center;
@@ -1372,7 +1375,7 @@ header .icons #bars {
 }
 .special .prices {
   background-color: #e67e22;
-  width: 125px;
+  width: 110px;
   height: 60px;
   text-indent: 25px;
   font-weight: 900;
@@ -1380,6 +1383,10 @@ header .icons #bars {
   margin-top: -15px;
   margin-bottom: 15px;
   z-index: -1;
+}
+.special .prices .price {
+  font-size: 25px;
+  color:#fff;
 }
 .special .prices::after {
   content: "";
@@ -1408,6 +1415,7 @@ header .icons #bars {
 .special .box-container .box h3 {
   font-size: 3rem;
   font-family: playfairdisplay;
+  margin-top: 50px;
   color: #e67e22;
 }
 .special .box-container .box p {
@@ -1416,6 +1424,9 @@ header .icons #bars {
   padding: 1rem 0;
   line-height: 2;
   text-align: left;
+}
+.special .box-container .box button {
+  margin-top: 20px;
 }
 
 /* ------------------------------------------- */
@@ -1694,7 +1705,7 @@ header .icons #bars {
   grid-template-columns: repeat(2,1fr);
   column-gap: 1rem;
 }
-.form-control {
+.form-control, textarea {
   background-color:  hsla(210, 4%, 11%, 1);
   color: #FFF;
   height: 55px;
@@ -1792,6 +1803,12 @@ header .icons #bars {
 .footer .footer-links {
   margin-bottom: 0px;
 }
+.footer #footer-links2 {
+  margin-left: -220px;
+}
+.footer #footer-links3 {
+  transform: translate(80rem,-35rem);
+}
 .footer .footer-links ul {
   list-style: none;
   padding: 0;
@@ -1817,6 +1834,9 @@ header .icons #bars {
 .footer .footer-links ul a:hover {
   color: #cda45e;
   padding-left: 5%;
+}
+.footer  .footer-newsletter {
+  transform: translate(60rem, -35rem);
 }
 .footer  .footer-newsletter form {
   margin-top: 30px;
